readme e .ev.example

--- a/src/.env.example
+++ b/src/.env.example
@@ -1,14 +1,15 @@
-PORT = 3000
-
-# APP INFO | supertokens
+# APP INFO
 APP_NAME = 'Programador AO'
 API_DOMAIN = 'http://localhost:3000'
 WEBSITE_DOMAIN = 'http://localhost:3001'
-SUPERTOKENS_API_BASEPATH = '/'
-SUPERTOKENS_WEBSITE_BASEPATH = '/login'
-SUPERTOKENS_CONNECTION_URI = 'http://localhost:3567'
-# SUPERTOKENS_API_KEY = 
+API_VERSION = 'v1'
+PORT = 3000
 
+# JWT CONFIGURATION
+JWT_SECRET = ''
+JWT_EXPIRE = ''
+
+# THIRD PARTY AUTHENTICATION
 CLIENT_CREDENTIALS_GOOGLE_CLIENT_ID = ''
 CLIENT_CREDENTIALS_GOOGLE_CLIENT_SECRET = ''
 
@@ -23,5 +24,6 @@ CLIENT_CREDENTIALS_APPLE_CLIENT_SECRET_TEAM_ID = ''
 CLIENT_CREDENTIALS_FACEBOOK_CLIENT_ID = ''
 CLIENT_CREDENTIALS_FACEBOOK_CLIENT_SECRET = ''
 
-DATABASE_URL="mysql://root:@localhost:3306/programador_ao_bd"
+# DATABASE 
+DATABASE_URL="mysql://root:@localhost:3306/programador_ao_db"
 
