solicitação de verificação de email

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "cSpell.words": [
         "sessao",
-        "usuarios"
+        "soliciatacao",
+        "solicitacao",
+        "usuarios",
+        "verificacao"
     ]
 }
