--- a/src/.env
+++ b/src/.env
@@ -1,3 +1,5 @@
+NODE_ENV = 'development'
+
 # APP INFO
 APP_NAME = 'Programador AO'
 API_DOMAIN = 'http://localhost:3000'
@@ -27,3 +29,8 @@ CLIENT_CREDENTIALS_APPLE_CLIENT_SECRET_TEAM_ID = 'YWQCXGJRJL'
 # DATABASE 
 DATABASE_URL="mysql://root:@localhost:3306/programador_ao_db"
 
+MAIL_HOST = 'smtp.ethereal.email'
+MAIL_PORT = '587'
+MAIL_USER = 'bethel.brown@ethereal.email'
+MAIL_PASS = 'eeF2FZnJnsPwzxxKyh'
+EMAIL_SUPORTE = 'info@ethereal.email'
