--- a/src/.env.example
+++ b/src/.env.example
@@ -1,3 +1,4 @@
+
 # APP INFO
 APP_NAME = 'Programador AO'
 API_DOMAIN = 'http://localhost:3000'
@@ -27,3 +28,8 @@ CLIENT_CREDENTIALS_FACEBOOK_CLIENT_SECRET = ''
 # DATABASE 
 DATABASE_URL="mysql://root:@localhost:3306/programador_ao_db"
 
+MAIL_HOST = ''
+MAIL_PORT = ''
+MAIL_USER = ''
+MAIL_PASS = ''
+EMAIL_SUPORTE = ''
