--- a/src/package.json
+++ b/src/package.json
@@ -33,6 +33,7 @@
     "case-anything": "^2.1.10",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "nodemailer-express-handlebars": "^6.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "supertokens-node": "^13.4.1",
@@ -46,6 +47,8 @@
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.0",
     "@types/node": "18.15.11",
+    "@types/nodemailer": "^6.4.7",
+    "@types/nodemailer-express-handlebars": "^4.0.2",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
