verificação de email e restruturação das pastas

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,12 @@
         "soliciatacao",
         "solicitacao",
         "usuarios",
+        "verificacao",
+        "activo",
+        "dtos",
+        "Expiracao",
+        "solicitacao",
+        "usuarios",
         "verificacao"
     ]
 }
