--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "migration": "npx prisma migrate dev",
-    "prisma-studio": "npx prisma studio",
+    "migration:deploy": "npx prisma migrate deploy",
+    "prisma:studio": "npx prisma studio",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
