redefinição de senha

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
+NODE_ENV = 'development'
 
 # APP INFO
+
 APP_NAME = 'Programador AO'
 API_DOMAIN = 'http://localhost:3000'
 WEBSITE_DOMAIN = 'http://localhost:3001'
@@ -7,26 +9,23 @@ API_VERSION = 'v1'
 PORT = 3000
 
 # JWT CONFIGURATION
+
 JWT_SECRET = ''
 JWT_EXPIRE = ''
 
 # THIRD PARTY AUTHENTICATION
+
 CLIENT_CREDENTIALS_GOOGLE_CLIENT_ID = ''
 CLIENT_CREDENTIALS_GOOGLE_CLIENT_SECRET = ''
 
 CLIENT_CREDENTIALS_GITHUB_CLIENT_ID = ''
 CLIENT_CREDENTIALS_GITHUB_CLIENT_SECRET = ''
 
-CLIENT_CREDENTIALS_APPLE_CLIENT_ID = ''
-CLIENT_CREDENTIALS_APPLE_CLIENT_SECRET_KEY_ID = ''
-CLIENT_CREDENTIALS_APPLE_CLIENT_SECRET_PRIVATE_KEY = ''
-CLIENT_CREDENTIALS_APPLE_CLIENT_SECRET_TEAM_ID = ''
+# CONFIGURAÇÕES DA DATABASE 
 
-CLIENT_CREDENTIALS_FACEBOOK_CLIENT_ID = ''
-CLIENT_CREDENTIALS_FACEBOOK_CLIENT_SECRET = ''
-
-# DATABASE 
 DATABASE_URL="mysql://root:@localhost:3306/programador_ao_db"
+
+# CONFIGURAÇÕES DO SERVIDOR DE EMAIL
 
 MAIL_HOST = ''
 MAIL_PORT = ''
