--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,11 @@
 {
     "cSpell.words": [
-        "sessao",
-        "soliciatacao",
-        "solicitacao",
-        "usuarios",
-        "verificacao",
         "activo",
+        "codigo",
         "dtos",
         "Expiracao",
+        "sessao",
+        "soliciatacao",
         "solicitacao",
         "usuarios",
         "verificacao"
