--- a/package.json
+++ b/package.json
@@ -27,14 +27,22 @@
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.0.3",
+    "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
+    "@nestjs/throttler": "^4.0.0",
     "@prisma/client": "^4.13.0",
     "bcrypt": "^5.1.0",
     "case-anything": "^2.1.10",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "firebase": "^9.21.0",
+    "firebase-admin": "^11.7.0",
+    "helmet": "^6.1.5",
     "nodemailer-express-handlebars": "^6.1.0",
+    "passport": "^0.6.0",
+    "passport-github": "^1.1.0",
+    "passport-google-oauth20": "^2.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "supertokens-node": "^13.4.1",
@@ -50,6 +58,8 @@
     "@types/node": "18.15.11",
     "@types/nodemailer": "^6.4.7",
     "@types/nodemailer-express-handlebars": "^4.0.2",
+    "@types/passport-github": "^1.1.7",
+    "@types/passport-google-oauth20": "^2.0.11",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
