--- a/package.json
+++ b/package.json
@@ -32,20 +32,25 @@
     "@nestjs/swagger": "^6.3.0",
     "@nestjs/throttler": "^4.0.0",
     "@prisma/client": "^4.13.0",
+    "@whitecloak/nestjs-passport-firebase": "^1.0.5",
     "bcrypt": "^5.1.0",
     "case-anything": "^2.1.10",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "diacritic": "^0.0.2",
     "firebase": "^9.21.0",
     "firebase-admin": "^11.7.0",
     "helmet": "^6.1.5",
+    "jwks-rsa": "^3.0.1",
     "nodemailer-express-handlebars": "^6.1.0",
     "passport": "^0.6.0",
     "passport-github": "^1.1.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "supertokens-node": "^13.4.1",
+    "unidecode": "^0.1.8",
     "validator": "^13.9.0"
   },
   "devDependencies": {
@@ -61,6 +66,7 @@
     "@types/passport-github": "^1.1.7",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/supertest": "^2.0.11",
+    "@types/unidecode": "^0.1.1",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
