--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "cSpell.words": [
         "activo",
+        "Actualizado",
+        "Actualizar",
+        "Aleatorio",
         "codigo",
         "dtos",
         "Expiracao",
