--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,4 +1,15 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["node_modules", "test", "dist", "**/*spec.ts"]
+  "exclude": [
+    "node_modules", 
+    "test", 
+    "dist", 
+    "**/*spec.ts", 
+    "**/*.json",
+    "jest.config.d.ts",
+    "jest.config.js",
+    "jest.config.js.map",
+    "tsconfig.build.tsbuildinfo",
+    "tsconfig.build.tsbuildinfo"
+  ]
 }
