update to deploy

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,11 +7,14 @@
         "codigo",
         "dtos",
         "Expiracao",
+        "middlewares",
+        "POSICAO",
         "sessao",
         "soliciatacao",
         "solicitacao",
         "unidecode",
         "usuarios",
-        "verificacao"
+        "verificacao",
+        "whitecloak"
     ]
 }
